<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/main_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/main_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_surname_hint"
        android:lines="1"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/main_forename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/main_forename_hint"
        android:lines="1"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:gravity="bottom">

        <Button
            android:id="@+id/main_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button_save" />

        <Button
            android:id="@+id/main_button_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button_view" />

    </LinearLayout>

</LinearLayout>
